# heuristic_ckc

./: .gitignore  CMakeLists.txt  ORLIB_runner.py  README.md  RunExperimentsPHCores.java  RunExperimentsPHTSPLIB.java  TSPLIB_runner.java  Table3_runner.java  Table4_figures_speedups.py  Table4_runner.java  Table5_runner.java  Table6_runner.java  Tables7-8_runner.py  URDI_runner.java  conanfile.txt  runner.py
dataset/: a280.tsp  gr202.tsp  gr229.tsp  kroB100.tsp  kroB200.tsp  kroa100.tsp  kroa200.tsp  lin105.tsp  pcb3038.tsp  pka379.tsp  pmed1.txt  pr107.tsp  pr124.tsp  pr136.tsp  pr299.tsp  ts225.tsp
dataset/ORLIB/: optimalsolutions.csv
dataset/TSPLIB/: d198.tsp  gr202.tsp  optimalsolutions.txt  pr136.tsp  pr299.tsp  rat195.tsp  tsp225.tsp  ulysses16.tsp
dataset/URDI-100/: URDI-100-01.tsp  URDI-100-02.tsp  URDI-100-04.tsp  URDI-100-05.tsp  URDI-100-07.tsp  URDI-100-10.tsp  URDI-100-11.tsp  URDI-100-12.tsp  URDI-100-13.tsp  URDI-100-14.tsp  URDI-100-15.tsp  URDI-100-16.tsp  URDI-100-17.tsp  URDI-100-19.tsp  URDI-100-20.tsp  URDI-100-23.tsp  URDI-100-26.tsp  URDI-100-27.tsp  URDI-100-28.tsp  URDI-100-29.tsp  URDI-100-30.tsp
dataset/URDI-1000/: URDI-1000-01.tsp
dataset/URDI-150/: URDI-150-01.tsp  URDI-150-02.tsp  URDI-150-03.tsp  URDI-150-05.tsp  URDI-150-06.tsp  URDI-150-08.tsp  URDI-150-09.tsp  URDI-150-10.tsp  URDI-150-11.tsp  URDI-150-12.tsp  URDI-150-14.tsp  URDI-150-15.tsp  URDI-150-16.tsp  URDI-150-18.tsp  URDI-150-20.tsp  URDI-150-27.tsp  URDI-150-29.tsp
dataset/URDI-200/: URDI-200-01.tsp  URDI-200-06.tsp  URDI-200-09.tsp  URDI-200-12.tsp  URDI-200-13.tsp  URDI-200-14.tsp  URDI-200-16.tsp  URDI-200-19.tsp  URDI-200-21.tsp  (+5 more)
src/: CkcSolver.cpp  CkcSolver.h  main.cpp
(+111 files in other folders)
